returns weather or not a domain is available for the particular word, currently is very binary

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,5 +6,20 @@
 <div class="jumbotron">
   <h1>Copy Copyright That</h1>
   <p class="lead">Have an idea for the next great company!? Check here to make sure the domain name and copyright are available! </p>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-6">
+      <form action="/" method="POST">
+        <h3> Business Name</h3>
+        <input name="business_name" type="string" required>
+
+        <input type="submit" value="search">
+      </form>
+    </div>
+  </div>
+</div>
+
 </div>
 {% endblock %}
