checks whether or not the dot com domain is available for a particular string

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,7 +3,7 @@
 {% block title %}About{% endblock %}
 {% block body %}
 <div class="jumbotron">
-  <h2>Results</h2>
-  The domain is {{ domain_availability }} for <em>{{ business_name }}</em>
+  <h2>{{ business_name }}</h2>
+  The domain is {{ domain_availability }}.
 </div>
 {% endblock %}
